--- a/index.html
+++ b/index.html
@@ -246,6 +246,7 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script src="./js/jquery.mask.min.js"></script>
     <script>
         $(document).ready(function(){
             $('#carousel-images').slick({
@@ -254,6 +255,8 @@
             $('.menu-hamburguer').click(function() {
                 $('nav').slideToggle();
             })
+
+            $('#telefone').mask('(00) 00000-0000')
         })
     </script>
 </body>
