--- a/index.html
+++ b/index.html
@@ -196,23 +196,23 @@
         <form>
             <div class="form-campo">
                 <label for="nome">Nome:</label>
-                <input type="text" id="nome">
+                <input type="text" id="nome" name="nome">
             </div>
             <div class="form-campo">
                 <label for="telefone">Telefone:</label>
-                <input type="tel" id="telefone">
+                <input type="tel" id="telefone" name="telefone">
             </div>
             <div class="form-campo">
                 <label for="email">E-mail:</label>
-                <input type="email" id="email">
+                <input type="email" id="email" name="email">
             </div>
             <div class="form-campo">
                 <label for="veiculo-interesse">Veículo de interesse:</label>
-                <input type="text" id="veiculo-interesse">
+                <input type="text" id="veiculo-interesse" name="veiculoDeInteresse">
             </div>
             <div class="form-campo">
                 <label for="mensagem">Mensagem:</label>
-                <textarea id="mensagem"></textarea>
+                <textarea id="mensagem" name="mensagem"></textarea>
             </div>
             <button type="submit">Enviar</button>
         </form>
@@ -247,6 +247,8 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script src="./js/jquery.mask.min.js"></script>
+    <script src="./js/jquery.validate.min.js"></script>
+    <script src="./js/messages_pt_BR.min.js"></script>
     <script>
         $(document).ready(function(){
             $('#carousel-images').slick({
@@ -256,7 +258,42 @@
                 $('nav').slideToggle();
             })
 
-            $('#telefone').mask('(00) 00000-0000')
+            $('#telefone').mask('(00) 00000-0000', {
+                placeholder: '(00) 12345-6789'
+            })
+
+            $('form').validate({
+                rules: {
+                    nome:{
+                        required:true
+                    },
+                    email:{
+                        required:true,
+                        email: true
+                    },
+                    telefone:{
+                        required:true
+                    },
+                    mensagem: {
+                        required: true
+                    },
+                    veiculoDeInteresse: {
+                        required: false
+                    }
+                },
+                messages: {
+                    nome: 'Por favor, insira o seu nome'
+                },
+                submitHandler: function(form){
+                    console.log(form)
+                },
+                invalidHandler: function(evento, validador){
+                    let camposIncorretos = validador.numberOfInvalidos();
+                    if(camposIncorretos){
+                        alert(`Existem ${camposIncorretos} campos incorretos.`)
+                    }
+                }
+            })
         })
     </script>
 </body>
