--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <a href="#promocoes">Promoções</a>
                     </li>
                     <li>
-                        <a href="#entre-em-contato">Contato</a>
+                        <a href="#contato">Contato</a>
                     </li>
                 </ul>
             </div>
@@ -190,7 +190,7 @@
     </div>
 </section>
 
-<section id="entre-em-contato">
+<section id="contato">
     <div class="container">
         <h2>Entre em contato</h2>
         <form>
