--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
         <form>
             <div class="form-campo">
                 <label for="nome">Nome:</label>
-                <input type="text" id="nome" name="nome">
+                <input type="text" id="nome" name="nome" placeholder="Nome Completo">
             </div>
             <div class="form-campo">
                 <label for="telefone">Telefone:</label>
@@ -212,7 +212,7 @@
             </div>
             <div class="form-campo">
                 <label for="mensagem">Mensagem:</label>
-                <textarea id="mensagem" name="mensagem"></textarea>
+                <textarea id="mensagem" name="mensagem" placeholder="Deixe um recado..."></textarea>
             </div>
             <button type="submit">Enviar</button>
         </form>
